# tatuin

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml  settings-example.toml  typos.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: add_notice.yaml  auto_merge.yaml  build_and_release.yaml  bump_version.yaml  cache.yaml  cargo_attribution.yaml  cargo_deny.yaml  cargo_miri.yaml  cargo_semver_checks.yaml  cargo_update.yaml  check_msrv.yaml  ci.yaml  ci.yml  crate_type.yaml  monthly.yaml  publish.yaml  update_msrv.yaml  weekly.yaml
assets/themes/: gruvbox-material-dark.theme  gruvbox-material-light.theme  nord.theme
attribution/: dependencies.toml  self.toml
src/: async_jobs.rs  caldav.rs  filter.rs  folders.rs  github.rs  github_issues.rs  gitlab_todo.rs  ical.rs  main.rs  migration.rs  obsidian.rs  patched_task.rs  project.rs  provider.rs  settings.rs  state.rs  task.rs  task_patch.rs  time.rs  todoist.rs  types.rs  ui.rs  utils.rs  wizard.rs
src/caldav/: client.rs  fake_project.rs
src/github/: client.rs  structs.rs
src/gitlab/: client.rs  structs.rs
src/ical/: client.rs  priority.rs  task.rs
src/migration/: xdg_to_dirs.rs
src/obsidian/: client.rs  md_file.rs  mdparser.rs  patch.rs  project.rs  rest.rs  task.rs
src/todoist/: client.rs  project.rs  task.rs
src/ui/: change_due_date_dialog.rs  dialog.rs  dialogs.rs  draw_helper.rs  filter_widget.rs  header.rs  hyperlink.rs  hyperlink_widget.rs  key_bindings_help_dialog.rs  key_buffer.rs  keyboard_handler.rs  line_edit.rs  list.rs  list_dialog.rs  mouse_handler.rs  order_changer.rs  selectable_list.rs  shortcut.rs  states_dialog.rs  states_widget.rs  style.rs  task_description_widget.rs  task_info_widget.rs  tasks_widget.rs  text_input_dialog.rs  widget.rs  widgets.rs
src/ui/dialogs/: add_edit_task.rs  confirmation.rs  create_update_task.rs  dialog.rs  key_bindings_help.rs  key_bindings_help_dialog.rs  list.rs  list_dialog.rs  multi_select_list.rs  states.rs  states_dialog.rs  text_input.rs  text_input_dialog.rs
src/ui/widgets/: button.rs  combo_box.rs  date.rs  date_time.rs  filter_panel.rs  hyperlink_widget.rs  line_edit.rs  markdown_line.rs  markdown_view.rs  spin_box.rs  task_row.rs  text.rs  text_edit.rs  widget.rs
src/wizard/: add_provider.rs
tatuin-core/: Cargo.toml  README.md
tatuin-core/src/: emoji_transformer.rs  filter.rs  folders.rs  lib.rs  patched_task.rs  project.rs  provider.rs  raw_link_transformer.rs  raw_task_name.rs  rich_string.rs  state.rs  string_error.rs  task.rs  task_patch.rs  time.rs  types.rs  utils.rs
tatuin-providers/: Cargo.toml  README.md
tatuin-providers/src/: caldav.rs  config.rs  github_issues.rs  gitlab_todo.rs  ical.rs  lib.rs  obsidian.rs  tatuin.rs  todoist.rs
tatuin-providers/src/caldav/: client.rs  fake_project.rs
tatuin-providers/src/github/: client.rs
tatuin-providers/src/gitlab/: client.rs
tatuin-providers/src/ical/: client.rs  task.rs
tatuin-providers/src/obsidian/: client.rs  description.rs  fs.rs  indent.rs  internal_links_renderer.rs  markdown.rs  md_file.rs  patch.rs  project.rs  rest.rs  state.rs  task.rs  task_name_provider.rs  utils.rs
tatuin-providers/src/tatuin/: client.rs  project.rs  task.rs
tatuin-providers/src/todoist/: client.rs  project.rs  task.rs
