[package]
name = "tatuin"
version = "0.22.0"
edition = "2024"
description = "Task Aggregator TUI for N providers"
repository = "https://github.com/panter-dsd/tatuin"
license-file = "LICENSE.txt"
readme = "README.md"
rust-version = "1.86"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.4"
colored = "3.0.0"
config = "0.15.14"
console-subscriber = "0.4.1"
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "bracketed-paste",
] }
ical = "0.11.0"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
itertools = "0.14.0"
markdown = "1.0.0"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha256 = "1.6.0"
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.41", features = ["parsing", "formatting"] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.5"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
url = "2.5.4"
url-builder = "0.1.1"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
xdg = "3.0.0"
