[package]
name = "tatuin-core"
version = "0.3.0"
edition = "2024"
description = "Core lib of the Tatuin project"
repository = "https://github.com/panter-dsd/tatuin"
readme = "README.md"
license = "MIT"
rust-version = "1.89"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.48.0", features = ["full"] }
