[package]
name = "tatuin-providers"
version = "0.2.0"
edition = "2024"
description = "Providers lib of the Tatuin project"
repository = "https://github.com/panter-dsd/tatuin"
readme = "README.md"
license = "MIT"
rust-version = "1.88"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
reqwest_dav = "0.2.1"
url = "2.5.7"
url-builder = "0.1.1"
urlencoding = "2.1.3"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
itertools = "0.14.0"
sha256 = "1.6.0"
regex = "1.11.3"
ical = "0.11.0"
strum = { version = "0.27.2", features = ["derive"] }
chrono-tz = "0.10.4"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tempfile = "3.23.0"
redb = "2.6.3"
tatuin-core = { path = "../tatuin-core" }
